feat: refactor entity classes to extend BaseEntity and utilize Lombok annotations for cleaner code; add Receipt entity with relationships