@@ -1,34 +1,44 @@
 package com.medicalsplants.exception;
 
+import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.AccessDeniedException;
 import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.security.core.AuthenticationException;
-import org.springframework.validation.FieldError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
 import java.time.Instant;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestControllerAdvice
+@RequiredArgsConstructor
 public class GlobalExceptionHandler {
 
-    @ExceptionHandler(BaseException.class)
-    public ResponseEntity<ErrorResponse> handleBaseException(BaseException ex) {
+    // Méthode utilitaire pour construire une réponse d'erreur
+    private ResponseEntity<ErrorResponse> buildErrorResponse(String code, String message, HttpStatus status) {
+        return buildErrorResponse(code, message, null, status);
+    }
+
+    private ResponseEntity<ErrorResponse> buildErrorResponse(String code, String message,
+            List<ErrorResponse.FieldErrorDetails> details, HttpStatus status) {
         ErrorResponse response = ErrorResponse.builder()
                 .success(false)
                 .error(ErrorResponse.ErrorDetails.builder()
-                        .code(ex.getCode())
-                        .message(ex.getMessage())
+                        .code(code)
+                        .message(message)
+                        .details(details)
                         .build())
                 .timestamp(Instant.now().toString())
                 .build();
+        return new ResponseEntity<>(response, status);
+    }
 
-        return new ResponseEntity<>(response, ex.getStatus());
+    @ExceptionHandler(BaseException.class)
+    public ResponseEntity<ErrorResponse> handleBaseException(BaseException ex) {
+        return buildErrorResponse(ex.getCode(), ex.getMessage(), ex.getStatus());
     }
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
@@ -40,60 +50,23 @@ public class GlobalExceptionHandler {
                 .field(error.getField())
                 .message(error.getDefaultMessage())
                 .build())
-                .collect(Collectors.toList());
+                .toList();
 
-        ErrorResponse response = ErrorResponse.builder()
-                .success(false)
-                .error(ErrorResponse.ErrorDetails.builder()
-                        .code("VALIDATION_ERROR")
-                        .message("Validation failed")
-                        .details(fieldErrors)
-                        .build())
-                .timestamp(Instant.now().toString())
-                .build();
-
-        return new ResponseEntity<>(response, HttpStatus.BAD_REQUEST);
+        return buildErrorResponse("VALIDATION_ERROR", "Validation failed", fieldErrors, HttpStatus.BAD_REQUEST);
     }
 
     @ExceptionHandler({AuthenticationException.class, BadCredentialsException.class})
     public ResponseEntity<ErrorResponse> handleAuthenticationException(Exception ex) {
-        ErrorResponse response = ErrorResponse.builder()
-                .success(false)
-                .error(ErrorResponse.ErrorDetails.builder()
-                        .code("UNAUTHORIZED")
-                        .message("Authentication failed:  " + ex.getMessage())
-                        .build())
-                .timestamp(Instant.now().toString())
-                .build();
-
-        return new ResponseEntity<>(response, HttpStatus.UNAUTHORIZED);
+        return buildErrorResponse("UNAUTHORIZED", "Authentication failed: " + ex.getMessage(), HttpStatus.UNAUTHORIZED);
     }
 
     @ExceptionHandler(AccessDeniedException.class)
     public ResponseEntity<ErrorResponse> handleAccessDeniedException(AccessDeniedException ex) {
-        ErrorResponse response = ErrorResponse.builder()
-                .success(false)
-                .error(ErrorResponse.ErrorDetails.builder()
-                        .code("FORBIDDEN")
-                        .message("Access denied:  insufficient permissions")
-                        .build())
-                .timestamp(Instant.now().toString())
-                .build();
-
-        return new ResponseEntity<>(response, HttpStatus.FORBIDDEN);
+        return buildErrorResponse("FORBIDDEN", "Access denied: insufficient permissions", HttpStatus.FORBIDDEN);
     }
 
     @ExceptionHandler(Exception.class)
     public ResponseEntity<ErrorResponse> handleGenericException(Exception ex) {
-        ErrorResponse response = ErrorResponse.builder()
-                .success(false)
-                .error(ErrorResponse.ErrorDetails.builder()
-                        .code("INTERNAL_ERROR")
-                        .message("An unexpected error occurred")
-                        .build())
-                .timestamp(Instant.now().toString())
-                .build();
-
-        return new ResponseEntity<>(response, HttpStatus.INTERNAL_SERVER_ERROR);
+        return buildErrorResponse("INTERNAL_ERROR", "An unexpected error occurred", HttpStatus.INTERNAL_SERVER_ERROR);
     }
 }
